<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8EADE7C0"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <View
        android:id="@+id/vwMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/view_content_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vwMenu"
        app:layout_constraintStart_toStartOf="@+id/vwMenu"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imvMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/im_rmenu"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/im_menu_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtCodigoMenu"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:drawableLeft="@drawable/ic_codigo"
                android:ems="10"
                android:hint="@string/c_digo"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="LabelFor,TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtNombreMenu"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:drawableLeft="@drawable/ic_nuevo_menu"
                android:ems="10"
                android:hint="@string/nombre_menu"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="LabelFor,TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtPreciomenu"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:drawableLeft="@drawable/ic_precio"
                android:ems="10"
                android:hint="@string/precio"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                tools:ignore="LabelFor,TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtDescripcionMenu"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:drawableLeft="@drawable/ic_descripcion"
                android:ems="10"
                android:hint="@string/descripci_n"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="LabelFor,TextContrastCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegistrarMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:background="@drawable/btn_registrar_menu"
            android:text="@string/registrar_menu"
            android:textColor="#FF45320C"
            android:textStyle="bold"
            app:backgroundTint="@null"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>